Updated descriptions for detailed products, other content tweaks.

--- a/about.html
+++ b/about.html
@@ -70,18 +70,18 @@
         <!-- contact us -->
         <h4 id="contact">Contact Us</h4>
         <ul>
-          <li>E-mail: ----------</li>
+          <li>E-mail: contact-mail@footyfans.com</li>
           <li>Phone1: (626)243-7837</li>
-          <li>Phone2: XXX-XXX-XXX</li>
+
         </ul>
       </div>
       <!-- store addresses -->
       <div class="about-addresses">
         <h4 id="addresses">Store Addresses</h4>
           <ol>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Cras malesuada metus eu magna elementum, sed tincidunt elit ullamcorper.</li>
-            <li>Etiam volutpat odio sed tempor dignissim.</li>
+            <li>Address 1</li>
+            <li>Address 2</li>
+            <li>Address 3</li>
           </ol>
       </div>
 
@@ -90,14 +90,14 @@
 
           <h4 id="faq">FAQ</h4>
 
-          <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
-          <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+          <p class="question">What if the item I purchased is in back-order?</p>
+          <p class="answer">Don't worry, we have your order in our list! When we are ready to ship your order, we will only charge you then and ship as soon as possible.</p>
 
-          <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
-          <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+          <p class="question">What if the item I want to purchase is out of stock?</p>
+          <p class="answer">If the item you want is still being produced, stay patient. We will stock items within 2 weeks of it going out of stock. If you wish, you can subscribe to our mailing list and get a notification when our items have been restocked.</p>
 
-          <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
-          <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+          <p class="question">I purchased the wrong item, how do I return it?</p>
+          <p class="answer">Let us know via e-mail about your item and we will send you a paid shipping label. Once you receive the shipping label, just repackage your order and ship it back to us. We will refund you within 2 business days of us receving the package.</p>
 
         </div>
     </div>
