--- a/confirmation.html
+++ b/confirmation.html
@@ -50,7 +50,7 @@
 	<!-- content -->
 	<div class="main-content container">
     <div class="shipping">
-      <h3>Thank you for your purchase</h3>
+      <h3 id="title">Thank you for your purchase!</h3>
       <a href="orderList.html" class="button">view order list</a>
     </div>
 	</div>
