--- a/detailedProductTH.html
+++ b/detailedProductTH.html
@@ -68,7 +68,8 @@
 
         <div class="product-info">
           <h3>Tottenham Hotspurs 2018/2019 Home Kit</h3>
-          <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+          <p class="price">$109.99</p>
+          <p>The Tottenham Hotspurs Third Kit was featured in their semi-final winning match in the Champion's League against Ajax on May 8th, 2019. This kit features the Nike logo on the right as well as the Hotspur's logo on the left. The Third kit is designed to look like a dark blue jersey with teal paint splattered throughout the shirt. This unique design differentiates the Hotspurs from other team jerseys.</p>
         </div>
 
 
