--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Inspiration and code implemented with help from w3schools and stack overflow. -->
     <meta charset="utf-8" />
     <script src="js/linkTo.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,6 +72,7 @@
 		<!-- club -->
     <h3>Shop By Club</h3>
 		<div class="content-item section-club">
+      <!-- images taken from https://www.premierleague.com/clubs -->
       <div class="club"><img src="img/BPL/arsenal.svg" alt="football_club"/><p>Arsenal</p></div>
       <div class="club"><img src="img/BPL/aston_villa.svg" alt="football_club"/><p>Aston Villa</p></div>
       <div class="club"><img src="img/BPL/bournemouth.svg" alt="football_club"/><p>AFC Bournemouth</p></div>
