--- a/payment.html
+++ b/payment.html
@@ -53,7 +53,7 @@
 	<div class="main-content container">
     <div class="shipping">
       <h3>Payment Info</h3>
-
+      <!-- POST removes the form data from the url. -->
       <form action="confirmation.html" class="payment-form" method="POST">
         <ul>
           <li>Select payment method:</li>
