--- a/detailedProductMU.html
+++ b/detailedProductMU.html
@@ -68,7 +68,8 @@
 
         <div class="product-info">
           <h3>Manchester United 2019/2020 Home Kit</h3>
-          <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+          <p class="price">$109.99</p>
+          <p>The New Manchester United 2019/2020 Home Kit. A black adidas logo is located on the right side and a homage to the Treble winning 1998-1999 season crest is located on the right. The two sleeves feature the time of the two clutch goals scored against Barcelona in the Champion's League Final in 1999, 90'+1 and 90'+3. Located on the lower left is a message that mentions the fact that Manchester United obtained the Treble in 1999. Lastly, on the inside, the winning finals dates are featured.</p>
         </div>
 
 
