--- a/news.html
+++ b/news.html
@@ -55,14 +55,14 @@
         <img src="img/beckham.png" alt="placeholder1"/>
         <h4>Update 1</h4>
 
-        <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+        <p>The Manchester United 2019/2020 Home Kit and the 1998/1999 Treble winning Home Kit are now available for purchase.</p>
       </div>
       <div class="card">
         <h3 class="psa">PSA</h3>
         <img src="img/travoltaconfused.gif" alt="placeholder2"/>
         <h4>PSA 1</h4>
 
-        <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+        <p>Note that for the time being, we will not be accepting American Express credit cards in our purchase. We are sorry for the inconvenience that this might cause.</p>
       </div>
 
       <div class="card">
@@ -70,7 +70,7 @@
         <img src="img/solskjaer.png" alt="placeholder3"/>
         <h4>Event 1</h4>
 
-        <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+        <p>All items are 50% off for the off-season. Shipping is free for orders above $100.</p>
       </div>
 
       <p></p>
