--- a/shipping.html
+++ b/shipping.html
@@ -12,8 +12,7 @@
     <title>Shipping</title>
 
 
-<!--     form code retrieved from https://www.w3schools.com/html/html_forms.asp
- -->
+<!--     form code implemeted with help from https://www.w3schools.com/html/html_forms.asp -->
   </head>
   <body>
     <header>
