--- a/detailedProductMU.html
+++ b/detailedProductMU.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
 
-    <title>DetailedProductName</title>
+    <title>Manchester United 2019/2020 Home Kit</title>
     <script src="js/functions.js"></script>
 
   </head>
