--- a/detailedProductTH.html
+++ b/detailedProductTH.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
 
-    <title>DetailedProductName</title>
+    <title>Tottenham Hotspur 2018/2019 Third Kit</title>
     <script src="js/functions.js"></script>
 
   </head>
