--- a/orderList.html
+++ b/orderList.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Orderlist</title>
+    <title>Order List</title>
 
   </head>
   <body>
