Changes to nav-main-item

--- a/catalog.html
+++ b/catalog.html
@@ -68,17 +68,7 @@
         </ul>
       </div>
 
-      <div class="filter-style">
-        <p>Filter by:</p>
-          <ul>
-            <li><input type="checkbox" name="filter" value="new" checked="checked"> New Arrivals</li>
-            <li><input type="checkbox" name="filter" value="size"> Size</li>
-            <li><input type="checkbox" name="filter" value="men"> Men</li>
-            <li><input type="checkbox" name="filter" value="women"> Women</li>
-            <li><input type="checkbox" name="filter" value="kids"> Kids</li>
-            <li><input type="checkbox" name="filter" value="clearance"> Clearance</li>
-          </ul>
-      </div>
+      
     </div>
     <!-- catalog list -->
     <div class="content-item catalog-list">
@@ -89,17 +79,17 @@
       </div>
       <div onclick="pointTo('detailedProductTH.html')" class="item " id= "TH1819"><img src="img/item_2_0.png" alt="Tottenham Hotspurs 2019 Third Kit"/><p class="item_name">Tottenham Hotspur</p><p>2018-2019 Third Kit</p>
       <p class="price">$109.99</p></div>
-      <div class="item" id= "MC1819"><img src="img/item_3.png" alt="Manchester City 2018-2019 Home Kit"/><p class="item_name">Manchester City</p><p>2018-2019 Home Kit</p>
+      <div onclick="pointTo('detailedProductMU.html')" class="item" id= "MC1819"><img src="img/item_3.png" alt="Manchester City 2018-2019 Home Kit"/><p class="item_name">Manchester City</p><p>2018-2019 Home Kit</p>
       <p class="price">$109.99</p></div>
-      <div class="item " id= "A1718"><img src="img/item_4.png" alt="Arsenal 2017-2018 Home Kit"/><p class="item_name">Arsenal</p><p>2017-2018 Home Kit</p>
+      <div onclick="pointTo('detailedProductMU.html')" class="item " id= "A1718"><img src="img/item_4.png" alt="Arsenal 2017-2018 Home Kit"/><p class="item_name">Arsenal</p><p>2017-2018 Home Kit</p>
       <p class="price">$79.99</p></div>
-      <div class="item " id= "MU1819"><img src="img/item_5.png" alt="Manchester United 2018/2019 Third Kit"/><p class="item_name">Manchester United</p><p>2018-2019 Third Kit</p>
+      <div onclick="pointTo('detailedProductMU.html')" class="item " id= "MU1819"><img src="img/item_5.png" alt="Manchester United 2018/2019 Third Kit"/><p class="item_name">Manchester United</p><p>2018-2019 Third Kit</p>
       <p class="price">$109.99</p></div>
-      <div class="item " id= "C1819"><img src="img/item_6.png" alt="Chelsea 2018/2019 Home Kit"/><p class="item_name">Chelsea</p><p>2018-2019 Home Kit</p>
+      <div onclick="pointTo('detailedProductTH.html')" class="item " id= "C1819"><img src="img/item_6.png" alt="Chelsea 2018/2019 Home Kit"/><p class="item_name">Chelsea</p><p>2018-2019 Home Kit</p>
       <p class="price">$109.99</p></div>
-      <div class="item " id= "E1819"><img src="img/item_7.png" alt="Everton 2018/2019 Home Kit"/><p class="item_name">Everton</p><p>2018-2019 Home Kit</p>
+      <div onclick="pointTo('detailedProductTH.html')" class="item " id= "E1819"><img src="img/item_7.png" alt="Everton 2018/2019 Home Kit"/><p class="item_name">Everton</p><p>2018-2019 Home Kit</p>
       <p class="price">$109.99</p></div>
-      <div class="item " id= "MU9800"><img src="img/item_8.png" alt="Manchester United 1998/2000 Home Kit"/><p class="item_name">Manchester United</p><p>1998-1999 Home Kit</p>
+      <div onclick="pointTo('detailedProductMU.html')" class="item " id= "MU9800"><img src="img/item_8.png" alt="Manchester United 1998/2000 Home Kit"/><p class="item_name">Manchester United</p><p>1998-1999 Home Kit</p>
       <p class="price">$159.99</p></div>
     </div>
 
