added headerscroll to counteract body ratio being too small in landscape

--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="js/headerScroll.js"></script>
     <script src="js/linkTo.js"></script>
     <script src="js/functions.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +22,7 @@
   </head>
   <body>
 
-    <header>
+    <header id="header">
         <!-- logo? -->
         <div class="header-menu ">
 
@@ -138,7 +139,7 @@
             <span>御池下ル下本能寺前町522</span>
           </address>
       </input>
-      
+
       <input type="radio" name="address" >
         <address>
           <span>Sir Matt Busby Way</span>
