alternate function for item div as failsafe if js does not work

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <script src="js/linkTo.js">
     </script>
+    <script src="js/headerScroll.js"></script>
     <script src="js/functions.js">
     </script>
     <meta charset="utf-8" />
@@ -21,7 +22,7 @@
   </head>
   <body>
 
-    <header>
+    <header id="header">
         <!-- logo? -->
         <div class="header-menu ">
 
@@ -68,29 +69,32 @@
         </ul>
       </div>
 
-      
+
     </div>
     <!-- catalog list -->
     <div class="content-item catalog-list">
-      <div onclick="pointTo('detailedProductMU.html')" class="item " id= "MU1920">
+      <div onclick="pointTo('detailedProductMU.html')" class="item " id= "MU1920"><img src="img/item_1_0.png" alt="item_1_0"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p><p class="price">$109.99</p>
+      <noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript>
 
-      <img src="img/item_1_0.png" alt="item_1_0"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p>
-      <p class="price">$109.99</p>
       </div>
       <div onclick="pointTo('detailedProductTH.html')" class="item " id= "TH1819"><img src="img/item_2_0.png" alt="Tottenham Hotspurs 2019 Third Kit"/><p class="item_name">Tottenham Hotspur</p><p>2018-2019 Third Kit</p>
-      <p class="price">$109.99</p></div>
+      <p class="price">$109.99</p>
+      <noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript>
+      </div>
       <div onclick="pointTo('detailedProductMU.html')" class="item" id= "MC1819"><img src="img/item_3.png" alt="Manchester City 2018-2019 Home Kit"/><p class="item_name">Manchester City</p><p>2018-2019 Home Kit</p>
-      <p class="price">$109.99</p></div>
+      <p class="price">$109.99</p>
+      <noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript>
+      </div>
       <div onclick="pointTo('detailedProductMU.html')" class="item " id= "A1718"><img src="img/item_4.png" alt="Arsenal 2017-2018 Home Kit"/><p class="item_name">Arsenal</p><p>2017-2018 Home Kit</p>
-      <p class="price">$79.99</p></div>
+      <p class="price">$79.99</p><noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript></div>
       <div onclick="pointTo('detailedProductMU.html')" class="item " id= "MU1819"><img src="img/item_5.png" alt="Manchester United 2018/2019 Third Kit"/><p class="item_name">Manchester United</p><p>2018-2019 Third Kit</p>
-      <p class="price">$109.99</p></div>
+      <p class="price">$109.99</p><noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript></div>
       <div onclick="pointTo('detailedProductTH.html')" class="item " id= "C1819"><img src="img/item_6.png" alt="Chelsea 2018/2019 Home Kit"/><p class="item_name">Chelsea</p><p>2018-2019 Home Kit</p>
-      <p class="price">$109.99</p></div>
+      <p class="price">$109.99</p><noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript></div>
       <div onclick="pointTo('detailedProductTH.html')" class="item " id= "E1819"><img src="img/item_7.png" alt="Everton 2018/2019 Home Kit"/><p class="item_name">Everton</p><p>2018-2019 Home Kit</p>
-      <p class="price">$109.99</p></div>
+      <p class="price">$109.99</p><noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript></div>
       <div onclick="pointTo('detailedProductMU.html')" class="item " id= "MU9800"><img src="img/item_8.png" alt="Manchester United 1998/2000 Home Kit"/><p class="item_name">Manchester United</p><p>1998-1999 Home Kit</p>
-      <p class="price">$159.99</p></div>
+      <p class="price">$159.99</p><noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript></div>
     </div>
 
 	</div>
