added scroll up header disappear js function to all pages.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Inspiration and code implemented with help from w3schools and stack overflow. -->
     <meta charset="utf-8" />
     <script src="js/linkTo.js"></script>
+    <script src="js/headerScroll.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
   </head>
   <body>
 
-    <header>
+    <header id="header">
         <!-- logo? -->
         <div class="header-menu ">
 
