--- a/shipping.html
+++ b/shipping.html
@@ -15,7 +15,7 @@
 <!--     form code implemeted with help from https://www.w3schools.com/html/html_forms.asp -->
   </head>
   <body>
-    <header>
+    <header id="header">
         <!-- logo? -->
         <div class="header-menu ">
 
@@ -63,7 +63,7 @@
         <input type="text" name="lastname" placeholder="Last Name"></li>
         <li>⠀</li>
         <li><label>Shipping address:</label>
-        <li><input type="text" name="street" placeholder="Address" size="25"></li>
+        <li><input type="text" name="street" placeholder="Address" size="20"></li>
         <li>⠀</li>
         <li><input type="text" name="city" placeholder="City">
         <input type="text" name="province" placeholder="Province"></li>
