--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="js/headerScroll.js"></script>
     <script src="js/linkTo.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
   </head>
   <body>
 
-    <header>
+    <header id="header">
         <!-- logo? -->
         <div class="header-menu ">
 
