--- a/payment.html
+++ b/payment.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script src="js/linkTo.js"></script>
+    <script src="js/headerScroll.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
   </head>
   <body>
 
-    <header>
+    <header id="header">
         <!-- logo? -->
         <div class="header-menu ">
 
