bug fixed from issues.txt

--- a/confirmation.html
+++ b/confirmation.html
@@ -49,9 +49,9 @@
     </header>
 
 	<!-- content -->
-	<div class="main-content container">
-    <div class="shipping">
-      <h3 id="title">Thank you for your purchase!</h3>
+	<div class="main-content container confirmation-container">
+    <div class="confirmation-box">
+      <h3>Thank you for your purchase!</h3>
       <a href="orderList.html" class="button">view order list</a>
     </div>
 	</div>
