--- a/payment.html
+++ b/payment.html
@@ -52,7 +52,7 @@
     </header>
 	<!-- content -->
 	<div class="main-content container">
-    <div class="shipping">
+    <div class="shipping payment-box">
       <h3>Payment Info</h3>
       <!-- POST removes the form data from the url. -->
       <form action="confirmation.html" class="payment-form" method="POST">
