--- a/shipping.html
+++ b/shipping.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script src="js/linkTo.js"></script>
+    <script src="js/headerScroll.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -51,7 +52,7 @@
 
 	<!-- content -->
 	<div class="main-content container">
-    <div class="shipping">
+    <div class="shipping shipping-box">
       <h3>Shipping Info</h3>
 
       <form action="payment.html" method="POST">
