--- a/catalog.html
+++ b/catalog.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="js/linkTo.js">
-    </script>
+    <script src="js/linkTo.js"></script>
     <script src="js/headerScroll.js"></script>
-    <script src="js/functions.js">
-    </script>
+    <script src="js/functions.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
