--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
 	<div class="main-content container container-home">
 
 		<!-- category -->
-    <h3>New Arrivals By Catalog</h3>
+    <h3 id="title">New Arrivals By Catalog</h3>
 		<div class="content-item section-catalog">
-      <div class="catalog">
+      <div class="catalog index-category">
         <div class="catalog-img"><img src="img/accessories.png" alt="accessories"/></div>
         <a href="catalog.html" class="newArrivals-link">Accessories</a>
 
       </div>
-        <div class="catalog">
+        <div class="catalog index-category">
           <div class="catalog-img"><img src="img/equipment.png" alt="equipment"/></div>
         <a href="catalog.html" class="newArrivals-link">Equipment</a>
       </div>
-      <div class="catalog">
+      <div class="catalog index-category">
         <div class="catalog-img"><img src="img/football.png" alt="football"/></div>
         <a href="catalog.html" class="newArrivals-link">Footballs</a>
       </div>
@@ -74,26 +74,26 @@
     <h3>Shop By Club</h3>
 		<div class="content-item section-club">
       <!-- images taken from https://www.premierleague.com/clubs -->
-      <div class="club"><img src="img/BPL/arsenal.svg" alt="football_club"/><p>Arsenal</p></div>
-      <div class="club"><img src="img/BPL/aston_villa.svg" alt="football_club"/><p>Aston Villa</p></div>
-      <div class="club"><img src="img/BPL/bournemouth.svg" alt="football_club"/><p>AFC Bournemouth</p></div>
-      <div class="club"><img src="img/BPL/brighton_and_hove_albion.svg" alt="football_club"/><p>Brighton & Hove Albion</p></div>
-      <div class="club"><img src="img/BPL/burnley.svg" alt="football_club"/><p>Burnley</p></div>
-      <div class="club"><img src="img/BPL/chelsea.svg" alt="football_club"/><p>Chelsea</p></div>
-      <div class="club"><img src="img/BPL/crystal_palace.svg" alt="football_club"/><p>Crystal Palace</p></div>
-      <div class="club"><img src="img/BPL/everton.svg" alt="football_club"/><p>Everton</p></div>
-      <div class="club"><img src="img/BPL/leicester_city.svg" alt="football_club"/><p>Leicester City</p></div>
-      <div class="club"><img src="img/BPL/liverpool.svg" alt="football_club"/><p>Liverpool</p></div>
-      <div class="club"><img src="img/BPL/man_city.svg" alt="football_club"/><p>Manchester City</p></div>
-      <div class="club"><img src="img/BPL/man_utd.svg" alt="football_club"/><p>Manchester United</p></div>
-      <div class="club"><img src="img/BPL/newcastle.svg" alt="football_club"/><p>Newcastle United</p></div>
-      <div class="club"><img src="img/BPL/norwich.svg" alt="football_club"/><p>Norwich City</p></div>
-      <div class="club"><img src="img/BPL/sheffield.svg" alt="football_club"/><p>Sheffield United</p></div>
-      <div class="club"><img src="img/BPL/southampton.svg" alt="football_club"/><p>Southampton</p></div>
-      <div class="club"><img src="img/BPL/tottenham.svg" alt="football_club"/><p>Tottenham Hotspur</p></div>
-      <div class="club"><img src="img/BPL/watford.svg" alt="football_club"/><p>Watford</p></div>
-      <div class="club"><img src="img/BPL/west_ham.svg" alt="football_club"/><p>West Ham United</p></div>
-      <div class="club"><img src="img/BPL/wolves.svg" alt="football_club"/><p>Wolves</p></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/arsenal.svg" alt="football_club"/><p>Arsenal</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/aston_villa.svg" alt="football_club"/><p>Aston Villa</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/bournemouth.svg" alt="football_club"/><p>AFC Bournemouth</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/brighton_and_hove_albion.svg" alt="football_club"/><p>Brighton & Hove Albion</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/burnley.svg" alt="football_club"/><p>Burnley</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/chelsea.svg" alt="football_club"/><p>Chelsea</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/crystal_palace.svg" alt="football_club"/><p>Crystal Palace</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/everton.svg" alt="football_club"/><p>Everton</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/leicester_city.svg" alt="football_club"/><p>Leicester City</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/liverpool.svg" alt="football_club"/><p>Liverpool</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/man_city.svg" alt="football_club"/><p>Manchester City</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/man_utd.svg" alt="football_club"/><p>Manchester United</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/newcastle.svg" alt="football_club"/><p>Newcastle United</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/norwich.svg" alt="football_club"/><p>Norwich City</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/sheffield.svg" alt="football_club"/><p>Sheffield United</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/southampton.svg" alt="football_club"/><p>Southampton</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/tottenham.svg" alt="football_club"/><p>Tottenham Hotspur</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/watford.svg" alt="football_club"/><p>Watford</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/west_ham.svg" alt="football_club"/><p>West Ham United</p></a></div>
+      <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/wolves.svg" alt="football_club"/><p>Wolves</p></a></div>
 		</div>
 	</div>
 
