fixed profile adaptiveness

--- a/profile.html
+++ b/profile.html
@@ -77,9 +77,24 @@
       <div class="change-password">
         <h4>Change Password:</h4>
         <ul>
-        <li><label>Current Password: </label><input type="text" ></li>
-        <li><label>New Password: </label><input type="text"></li>
-        <li><label>Retype Password: </label><input type="text"></li>
+          <li>
+            <fieldset>
+              <legend>Current Password: </legend>
+              <input type="text">
+            </fieldset>
+          </li>
+          <li>
+            <fieldset>
+              <legend>New Password: </legend>
+              <input type="text">
+            </fieldset>
+          </li><li>
+            <fieldset>
+              <legend>Retype Password: </legend>
+              <input type="text">
+            </fieldset>
+          </li>
+
       </ul>
       <div class="clear-float">
         <p class="passwordUpdate">Your password has been changed!</p>
