--- a/orderList.html
+++ b/orderList.html
@@ -81,7 +81,7 @@
 
           </div>
           <div class="return-to-home">
-            <a href="index.html" class="button">back to home</a>
+            <a href="index.html" class="button">Return home</a>
           </div>
       </div>
 	</div>
