--- a/payment.html
+++ b/payment.html
@@ -63,7 +63,7 @@
         </ul>
         <ul>
           <li>Payment information:</li>
-          <li><input type="text" name="cardnumber" placeholder="Card Number" size="18"><input type="text" name="month" placeholder="MM" size="3"><input type="text" name="year" placeholder="YYYY" size="5"></li>
+          <li><input type="text" name="cardnumber" placeholder="Card Number" size="18"><input type="text" name="monthYear" placeholder="MM/YY" size="6"></li>
           <li><input type="text" name="nameoncard" placeholder="Name on Card"></li>
           <li><input type="text" name="securitynumber" placeholder="SN" size="4"></li>
         </ul>
@@ -71,8 +71,8 @@
         <ul>
 
         <li>Billing Address:</li>
-        <li><input type="text" name="street" placeholder="Address 1" size="52"></li>
-        <li><input type="text" name="city" placeholder="City" size="30"> <input type="text" name="province" placeholder="Province" size="20"></li>
+        <li><input type="text" name="street" placeholder="Address 1" size="20"></li>
+        <li><input type="text" name="city" placeholder="City" size="25"> <input type="text" name="province" placeholder="Province" size="20"></li>
         <li><input type="text" name="postal" placeholder="Zip Code" size ="10"> <input type="text" name="country" placeholder="Country" size="18"></li>
 
 
