added elements missing, QC applied to all sites

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <!-- search bar -->
           <div class="header-row-2">
             <input type="text" placeholder="Search here...">
+            <img onclick="pointTo('catalog.html')" src="img/search-icon.png"/>
 
           </div>
 
@@ -53,22 +54,28 @@
 	<div class="main-content container container-home">
 
 		<!-- category -->
-    <h3 id="title">New Arrivals By Catalog</h3>
+    <!-- <h3 id="title">New Arrivals</h3>
 		<div class="content-item section-catalog">
-      <div class="catalog index-category">
-        <div class="catalog-img"><img src="img/accessories.png" alt="accessories"/></div>
-        <a href="catalog.html" class="newArrivals-link">Accessories</a>
+      <div class="new-arrival-item">
+        <img src="img/item_1_0.png" alt="Manchester United 2019/20 Home Jersey">
+        <div class="new-arrival-p"><p>Manchester United 2019/20 Home Jersey</p></div>
+
+
 
       </div>
-        <div class="catalog index-category">
-          <div class="catalog-img"><img src="img/equipment.png" alt="equipment"/></div>
-        <a href="catalog.html" class="newArrivals-link">Equipment</a>
+        <div class="new-arrival-item">
+          <img src="img/item_2_0.png" alt="Tottenham Hotspur 2018/19 Third Jersey">
+          <div class="new-arrival-p"><p>Tottenham Hotspur 2018/19 Third Jersey</p></div>
+
+
       </div>
-      <div class="catalog index-category">
-        <div class="catalog-img"><img src="img/football.png" alt="football"/></div>
-        <a href="catalog.html" class="newArrivals-link">Footballs</a>
+      <div class="new-arrival-item">
+        <img src="img/item_3.png" alt="Manchester City 2018/19 Home Jersey">
+        <div class="new-arrival-p"><p>Manchester City 2018/19 Home Jersey</p></div>
+
+
       </div>
-		</div>
+		</div> -->
 
 		<!-- club -->
     <h3>Shop By Club</h3>
