--- a/news.html
+++ b/news.html
@@ -33,6 +33,7 @@
           <!-- search bar -->
           <div class="header-row-2">
             <input type="text" placeholder="Search here...">
+            <img onclick="pointTo('catalog.html')" src="img/search-icon.png"/>
 
           </div>
 
@@ -53,14 +54,14 @@
       <h3 id="title">News</h3>
       <div class="card">
         <h3 class="update">Update</h3>
-        <img src="img/beckham.png" alt="placeholder1"/>
+        <img src="img/item_1_2.png" alt="news card image"/>
         <h4>Update 1</h4>
 
         <p>The Manchester United 2019/2020 Home Kit and the 1998/1999 Treble winning Home Kit are now available for purchase.</p>
       </div>
       <div class="card">
         <h3 class="psa">PSA</h3>
-        <img src="img/travoltaconfused.gif" alt="placeholder2"/>
+        <img src="img/news_item_2.png" alt="placeholder2"/>
         <h4>PSA 1</h4>
 
         <p>Note that for the time being, we will not be accepting American Express credit cards in our purchase. We are sorry for the inconvenience that this might cause.</p>
@@ -71,7 +72,7 @@
         <img src="img/solskjaer.png" alt="placeholder3"/>
         <h4>Event 1</h4>
 
-        <p>All items are 50% off for the off-season. Shipping is free for orders above $100.</p>
+        <p>All items are 50% off to celebrate Solskjaer's permanent appointment as manager. Shipping is free for orders above $100.</p>
       </div>
 
       <p></p>
