--- a/orderList.html
+++ b/orderList.html
@@ -35,6 +35,8 @@
           <!-- search bar -->
           <div class="header-row-2">
             <input type="text" placeholder="Search here...">
+            <img onclick="pointTo('catalog.html')" src="img/search-icon.png"/>
+
 
           </div>
 
