--- a/profile.html
+++ b/profile.html
@@ -42,6 +42,7 @@
           <!-- search bar -->
           <div class="header-row-2">
             <input type="text" placeholder="Search here...">
+            <img onclick="pointTo('catalog.html')" src="img/search-icon.png"/>
 
           </div>
 
@@ -121,32 +122,30 @@
 		<div class="content-item profile-billing">
       <h3>Billing info</h3>
       <div class="address-radio">
-        <form>
+        <div>
           <input type="radio" name="address" checked>
             <address>
               <span>303 Browning Lane</span>
               <span>Horseheads New York NY</span>
               <span>14845</span>
             </address>
-            </form>
-
-        <form>
+            </div>
+            <div>
         <input type="radio" name="address" >
           <address>
             <span>〒604-8091</span>
             <span>Kyoto Japan Nakagyo Ward</span>
             <span>御池下ル下本能寺前町522</span>
           </address>
-          </form>
-
-      <form>
+          </div>
+          <div>
       <input type="radio" name="address" >
         <address>
           <span>Sir Matt Busby Way</span>
           <span>Stretford Manchester</span>
           <span>M16 0RA United Kingdom</span>
         </address>
-      </form>
+      </div>
 
     </div>
 		</div>
