--- a/profile.html
+++ b/profile.html
@@ -81,18 +81,21 @@
           <li>
             <fieldset>
               <legend>Current Password: </legend>
-              <input type="text">
+              <input type="password" id="curr-pass">
+              <img src="img/eye-icon.png" onclick="eye(1)"/>
             </fieldset>
           </li>
           <li>
             <fieldset>
               <legend>New Password: </legend>
-              <input type="text">
+              <input type="password"id="new-pass" >
+              <img src="img/eye-icon.png"onclick="eye(2)"/>
             </fieldset>
           </li><li>
             <fieldset>
               <legend>Retype Password: </legend>
-              <input type="text">
+              <input type="password"id="retype-pass">
+              <img src="img/eye-icon.png"onclick="eye(3)"/>
             </fieldset>
           </li>
 
