added footer and links, modified pages to work with footer...

--- a/news.html
+++ b/news.html
@@ -77,7 +77,13 @@
 
       <p></p>
     </div>
-
+    <footer>
+      <nav>
+        <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
+        <a href="Style_Guide/styleGuide.html">Style Guide</a>
+        <a href="">Citations</a>
+      </nav>
+    </footer>
 
   </body>
 </html>
