edited nav-button description

--- a/Style_Guide/styleGuide.html
+++ b/Style_Guide/styleGuide.html
@@ -125,7 +125,7 @@
             <p>At Footy Fans, there are two types of navigation button styles. First, there are the navigation buttons that link to the main content of the website. For this we use rectangular shape buttons that blend in with the top bar. On the other hand, there are the contact buttons that link to social media, as well as contact and addresses. These buttons are located at the footer for the mobile site or the header, along with the other navigation buttons, on the desktop site.</p>
 
             <h4 id="header-buttons">Header Buttons</h4>
-            <p>The buttons in the header, excluding the social media and contact buttons, are composed of the News, the Collections, the Wishlist, the Account and the Cart sections. These buttons blend in with the header bar, but change color when hovered over, as a way to show that these are, in fact, buttons and can be clicked on. First, we define the HTML code for these buttons. The code below is for the News button:</p>
+            <p>The buttons in the header, excluding the social media and contact buttons, are composed of the News, the Collections, the Wishlist, the Account and the Cart sections. These buttons blend in with the header bar. First, we define the HTML code for these buttons. The code below is for the News button:</p>
             <h5>HTML code</h5>
             <code>&lt;button class="header-nav-button" onclick="linkTo('news.html')"&gt;News&lt;/button&gt;</code>
 
@@ -143,10 +143,10 @@
                 transition: background 0.3s  ease-out;
 
               }
-              .header-nav-button:hover{
+<!--               .header-nav-button:hover{
                 background-color: grey;
 
-              }
+              } -->
 
             </code></pre>
 
